# MMarchand-NSI.github.io

./: .gitattributes  .gitignore  404.html  corrections.yml  environment.yml  hooks.py  index.html  main.py  mkdocs.yml  pyproject.toml  robots.txt  sitemap.xml
.claude/: settings.local.json
annales/annales/: index.html
assets/: Iris.csv  install_graphviz.bat
docs/: .pages  index.md  robots.txt
docs/annales/: .pages  annales.md
docs/assets/: jointures.sql  musique.sql  soluce.sql
docs/javascripts/: exercices.js  floating-console.js  plotter.js  process_viewer.js
docs/langages/: index.md  poo.md
docs/les-outils/: 0.1cleusb.md  0.votreordi.md  1.setup-vscode.md  3.vscode_profiles_daemons.md  elm.md  git.md  index.md  migration-terms.md  ocaml.md  pyproject.toml  settings.json  setup-nsi.md  setup-vscode.md
docs/premiere/: .pages  index.md
docs/projets/: chaos-game.md  demineur.md  devine-mon-nombre.md  imdb-flask.md  intro-pyxel-nopoo.md  intro-pyxel.md  jeudelavie.md  lightsout.md  mastermind.md  musique.md  othello.md  pendu.md  space_invader.md  voisins.md
docs/recherche/: .pages  exemple-llm.md  hyperoperation.md  intro_categories.md  intro_llm_philo.md
docs/snt/: .pages  index.md
docs/stylesheets/: extra.css
docs/terminale/: .pages  complements_python.md  index.md
javascripts/: bundle.js  bundle.js.map  dictionnaire.js  floating-console.js  myglobal.js  plotter.js
langages/: index.html
langages/poo/: index.html
les-outils/: index.html  pyproject.toml  settings.json
les-outils/0.1cleusb/: index.html
les-outils/0.votreordi/: index.html
les-outils/1.setup-vscode/: index.html
les-outils/2.elm/: index.html
les-outils/3.vscode_profiles_daemons/: index.html
les-outils/elm/: index.html
les-outils/git/: index.html
les-outils/migration-terms/: index.html
les-outils/ocaml/: index.html
les-outils/setup-nsi/: index.html
les-outils/setup-vscode/: index.html
premiere/: index.html
premiere/IHM/: index.html
premiere/logique/: index.html
premiere/prog/: 2.sequences
première/logique/: index.html
projets/: projets.md.claude
projets/chaos-game/: index.html
projets/demineur/: index.html
projets/devine-mon-nombre/: index.html
projets/imdb-flask/: index.html
projets/intro-pyxel/: index.html
projets/intro-pyxel-nopoo/: index.html
projets/jeudelavie/: index.html
projets/lightsout/: index.html
projets/mastermind/: index.html
projets/musique/: index.html
projets/othello/: index.html
projets/pendu/: index.html
projets/snake/: index.html
projets/space_invader/: index.html
projets/voisins/: index.html
recherche/exemple-llm/: index.html
recherche/hyperoperation/: index.html
recherche/intro_categories/: index.html
recherche/intro_llm_philo/: index.html
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/assets/: install_graphviz.bat  jointures.sql  soluce.sql
site/javascripts/: bundle.js  bundle.js.map  myglobal.js  plotter.js  process_viewer.js
snt/: index.html
stylesheets/: extra.css
terminale/: index.html
(+583 files in other folders)
